@@ -6,6 +6,7 @@ Revision history for Perl module Text::Abbrev
     By convention the abstract is: <module-name> - <short description>
   * Added use of strict and warnings, bumping min perl version to 5.006.
   * Added a LICENSE section to pod, with the text for Perl_5 license
+  * Added github repo to the doc, and noted that it's a core module.
 
 1.02 2012-09-11 FLORA
   * Fix NAME section.
